--- a/Transmissions.html
+++ b/Transmissions.html
@@ -125,7 +125,7 @@ Chains are available in many sizes and strengths; this means they are easily ada
 The entire system of gears used to manipulate motor speed, torque or direction is called a <span class="vocabColor"><b>gear reduction</b></span>.  For every power transmission using gears, there is, at minimum, a driver gear and a driven gear. A <span class="vocabColor"><b>driver gear</b></span> is the gear that is directly connected to the motor that then “drives” or turns the rest of the system. <b>Driver gears convert torque to force</b>. The <span class="vocabColor"><b>driven gear</b></span> is connected, directly or indirectly, to the driver gear and outputs power to the mechanism. <b>Driven gears convert force to torque</b>. Any gears between a driver gear and a driven gear that have no effect on the total system are called <span class="vocabColor"><b>idler</b></span> gears.</p>
 <br>
 <div class="row">
-	<div class="col-md-7"><br><br><p>A gear ratio determines what amount of the motor power will be converted to torque with the gear reduction. To find the gear ratio, you need to know the number of teeth (N) or the torque (τ) on both the driver and driven gears, as well as the efficiency of the gears.</p></div>
+	<div class="col-md-7"><br><p>A gear ratio determines what amount of the motor power will be converted to torque with the gear reduction. To find the gear ratio, you need to know the number of teeth (N) or the torque (τ) on both the driver and driven gears, as well as the efficiency of the gears.</p></div>
 	<div class="col-md-4"><center><img src="TransmissionPictures/GearRatio.png" HEIGHT="50px" /img></center>
 	<center><img src="TransmissionPictures/GearVariables.png" HEIGHt="50px" /img></center>
 	<br>
@@ -140,7 +140,10 @@ The entire system of gears used to manipulate motor speed, torque or direction i
 </div>
 <br>
 <p>Remember: A transmission with a small driven gear and a large driver gear will produce low speed and high torque. A transmission with a large driver gear and a small driven gear will produce high speed and low torque. </p>
-<br><br>
+<br>
+<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/38330580/?autostart=false" frameborder="0" allowfullscreen></iframe>
+<p><b>Change the gear sizes or driver speed to see how the speeds of the idler and driven gear change. Hit the space bar to add a fourth gear on the same axle as the idler. Again, change the variables to see how the system outputs change.</b></p>
+<br>
 <h3>Other Vocab for Gears</h3>
 <p><span class="vocabColor"><b>Pressure Angle</b></span>: The angle between the tooth force and gear wheel tangent </p>
 <p><span class="vocabColor"><b>Diametral Pitch</b></span>: The number of teeth divided by the diameter of the gear. This is generally used to classify different gear sizes and types.</p>
