--- a/Circuits.html
+++ b/Circuits.html
@@ -187,6 +187,9 @@ return false;
 	<center><img src="Circuit_Pictures/Power_Equivalence.png" HEIGHT="50px" /></center>
 	<center><span class="captionStyle">Variations on Power Formula</span></center> </div>
 </div>
+<br>
+<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/38286716/?autostart=false" frameborder="0" allowfullscreen></iframe>
+<p><b>Add or remove batteries and change the resistance to see how the variables in the formula change. Click the "Instructions" button for additional information.</b></p>
 
 <p><h3>More Vocab:</h3></p>
 <p><span class="vocabColor"><b>Node</b></span>: A point in a circuit where two or more 
