Add Concept Check Questions to Side Navigator

--- a/Circuits.html
+++ b/Circuits.html
@@ -277,7 +277,7 @@ closed path </p>
 </div>
 <br><br>
 
-<h2>Concept Questions</h2>
+<h2 id="questions" class="offset">Concept Questions</h2>
 <form>
 	<label for="Series">For which configuration of resistors would you add the value of the resistors to get equivalent resistance?</label>
 	<br/>
@@ -336,6 +336,9 @@ closed path </p>
 			</li>
 			<li>
 				<a href="#kcl">Kirchoff's Current and Voltage Laws</a>
+			</li>
+			<li>
+				<a href="#questions">Concept Check Questions</a>
 			</li>
 			<li>
 				<a href="#vocab">Section Vocab</a>
