--- a/Programming.html
+++ b/Programming.html
@@ -339,7 +339,7 @@ if</span> <span class="codeText"> (argument) { </span><br>
 	</div>
 </div>
 
-<h2>Concept Questions</h2>
+<h2 id="questions" class="offset">Concept Questions</h2>
 <form>
 	<label for="float">Which data type can represent the number 12.5?</label>
 	<br/>
@@ -427,6 +427,9 @@ if</span> <span class="codeText"> (argument) { </span><br>
 			<li>
 				<a href="#break">Break and Continue</a>
 			</li>   
+			<li>
+				<a href="#questions">Concept Check Questions</a>
+			</li>
 			<li>
 				<a href="#vocab">Section Vocab</a>
 			</li>            
