--- a/Sensors.html
+++ b/Sensors.html
@@ -157,7 +157,7 @@ return false;
 <p>Interrupts can get tricky or messy if there are multiple things you are waiting for in a program. Imagine that same example, but on top of watching TV and waiting for the phone you also have to attend to someone at the door, food cooking in the kitchen and checking your social media accounts on your computer. What if the doorbell rings at the same time as the timer in the kitchen beeps, the phone rings, and your best friend messages you on your laptop? Which one would you handle first? To help combat this, interrupts can be assigned a level of importance. That way if multiple are triggered at the same time, the one with the lowest importance (most important) would go first, followed by the next lowest and so on until there are no more interrupts left to handle. The program would then return back to whatever it was doing before all of the interrupts were triggered.</p>
 	
 	
-<h2>Concept Questions</h2>
+<h2 id="questions" class="offset">Concept Questions</h2>
 <form>
 	<br/>
 	<label for="sensor">Which sensor would you use to determine if your robot is in contact with a wall?</label>
@@ -217,7 +217,10 @@ return false;
 			</li>   
 			<li>
 				<a href="#isr">Interrupt Service Routine</a>
-			</li>            
+			</li>     
+			<li>
+				<a href="#questions">Concept Check Questions</a>
+			</li>       
         </ul>
     </div>
 </div>
