Fixes errors in concept check questions

--- a/Circuits.html
+++ b/Circuits.html
@@ -293,10 +293,10 @@ closed path </p>
 	<p id="equations_result" style="min-height:20px;"></p>
 
 	<br/>
-	<label for="Parallel">What would be the equivalent resistance of three 330 Ohm resistors in parallel?</label>
+	<label for="parallel">What would be the equivalent resistance of three 330 Ohm resistors in parallel?</label>
 	<br/>
 	<div onclick="updateParagraph('#NineNinety', '#parallel_result', 'Double check your equation. Consider reviewing the section on Resistors in Parallel'); _gaq.push(['_trackEvent', 'checkQuestion', 'correct_click', 'Circuits.Parallel'])"><input type="radio" id="NineNinety" value="NineNinety" name="parallel"/> 990 Ohms</div>
-	<div onclick="updateParagraph('#Sixty', '#parallel_result', 'Double check your equation. Consider reviewing the section on Resistors in Parallel') _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Parallel']);"><input type="radio" id="Sixty" value="Sixty" name="parallel"/> 60 Ohms</div>
+	<div onclick="updateParagraph('#Sixty', '#parallel_result', 'Double check your equation. Consider reviewing the section on Resistors in Parallel'); _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Parallel']);"><input type="radio" id="Sixty" value="Sixty" name="parallel"/> 60 Ohms</div>
 	<div onclick="updateParagraph('#OneTen', '#parallel_result', 'Correct!'); _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Parallel'])"><input type="radio" id="OneTen" value="OneTen" name="parallel"/> 110 Ohms</div>
 	<p id="parallel_result" style="min-height:20px;"></p>
 </form>
