--- a/Transmissions.html
+++ b/Transmissions.html
@@ -218,7 +218,7 @@ When using chain and sprocket transmissions, the chain must be wrapped a minimum
 	<br/>
 	<label for="torque">Is the system High Speed/Low Torque or Low Speed/High Torque?</label>
 	<div onclick="updateParagraph('#HSLT','#torque_result', 'Consider Reviewing the Gears section again');"><input type="radio" id="HSLT" value="HSLT" name="torque"> High Speed/Low Torque </div>
-	<div onclick="updateParagraph('#LSHT','#torque_result', 'Correct!');"><input type="radio" id="LSHT" value="LSHT" name="torque"> High Speed/Low Torque </div>
+	<div onclick="updateParagraph('#LSHT','#torque_result', 'Correct!');"><input type="radio" id="LSHT" value="LSHT" name="torque"> Low Speed/High Torque </div>
     <p id="torque_result" style="min-height:20px;"></p>
 </form>
 </div>
