Question checkboxes are independent

--- a/Transmissions.html
+++ b/Transmissions.html
@@ -203,16 +203,16 @@ When using chain and sprocket transmissions, the chain must be wrapped a minimum
 
 	<br/>
 	<label for="direction">What direction is the final driven gear moving?</label>
-	<div onclick="updateParagraph('#Clockwise','#directinon_result', 'Correct!');"><input type="radio" id="Clockwise" value="Clockwise" name="ratio"/> Clockwise  </div>
-    <div onclick="updateParagraph('#Counterclockwise','#directinon_result', 'Consider Reviewing the Gears section again');"><input type="radio" id="Counterclockwise" value="Counterclockwise" name="ratio"/> Counterclockwise </div>
+	<div onclick="updateParagraph('#Clockwise','#directinon_result', 'Correct!');"><input type="radio" id="Clockwise" value="Clockwise" name="direction"/> Clockwise  </div>
+    <div onclick="updateParagraph('#Counterclockwise','#directinon_result', 'Consider Reviewing the Gears section again');"><input type="radio" id="Counterclockwise" value="Counterclockwise" name="direction"/> Counterclockwise </div>
     <p id="directinon_result" style="min-height:20px;"></p>
 
 <br/><br/>
 <p>Given a power transmission with a motor connected to a 12-tooth gear and a 60-tooth gear:</p>
 	<label for="ratio2">What is the gear ratio of the system?</label>
 	<br/>
-    <div onclick="updateParagraph('#1to5','#ratio2_result', 'Correct!');"><input type="radio" id="1to5" value="1to5" name="ratio"/> 1:5  </div>
-    <div onclick="updateParagraph('#5to1','#ratio2_result', 'Consider Reviewing the Gears section again');"><input type="radio" id="5to1" value="5to1" name="ratio"/> 5:1 </div>
+    <div onclick="updateParagraph('#1to5','#ratio2_result', 'Correct!');"><input type="radio" id="1to5" value="1to5" name="ratio2"/> 1:5  </div>
+    <div onclick="updateParagraph('#5to1','#ratio2_result', 'Consider Reviewing the Gears section again');"><input type="radio" id="5to1" value="5to1" name="ratio2"/> 5:1 </div>
     <p id="ratio2_result" style="min-height:20px;"></p>
 
 	<br/>
