Update about page.

--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
 	<!--
 	Thanks for looking at our source code! This webpage was developed for the 
 	RBE 1001 E-Textbook IQP in 2014. For questions, contact rbebook@wpi.edu
+
+	Have comments or suggestions about the source code? Find it at:s
+	github.com/petScarecrow/rbe1001book
 	-->
 
 	<meta charset="utf-8">
@@ -75,7 +78,8 @@
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
 <p>
-This website has been developed as part of an Interactive Qualifying Project at Worcester Polytechnic Institute. The project aims to study the impact of an interactive textbook on student learning in the introduction to robotics class. As part of this project, usage data is being collected through Google Analytics. 
+This website has been developed as part of an Interactive Qualifying Project at <a href="www.wpi.edu">Worcester Polytechnic Institute</a>. The project aims to study the impact of an interactive textbook on student learning in the introduction to robotics class. As part of this project, usage data is being collected. By using this site, you agree to anonomous tracking through <a href="www.analytics.google.com">Google Analytics.</a></p>
+<p>
 <!-- CONTENT END -->
 </div>
 
