Fixed File Path for Pictures

--- a/Circuit_Popups/Example.html
+++ b/Circuit_Popups/Example.html
@@ -39,8 +39,8 @@
 <!-- CONTENT BEGIN -->
 <TABLE ALIGN = CENTER>
    <TR>
-      <TD WIDTH=50% ALIGN=CENTER><img src="Example_Circuit.png"  HEIGHT="200px" /></TD>
-      <TD WIDTH=50% ALIGN=CENTER><img src="Example_Values.png"  HEIGHT="150px" /></TD>
+      <TD WIDTH=50% ALIGN=CENTER><img src="Circuit_Pictures/Example_Circuit.png"  HEIGHT="150px" /></TD>
+      <TD WIDTH=50% ALIGN=CENTER><img src="Circuit_Pictures/Example_Values.png"  HEIGHT="150px" /></TD>
    </TR>
 </TABLE>
 
