Added Animations to Sensors

--- a/Sensors.html
+++ b/Sensors.html
@@ -117,6 +117,8 @@ return false;
 	<div class="col-md-7"><p>Mechanical sensors are used to tell when a robot, or subsystem on a robot, is in contact with something. The most common types of mechanical sensors are bump sensors and limit switches. Mechanical sensors can tell whether the system is at a singular, set distance. Mechanical sensors send a digital signal (1 or 0) to the input pins on a controller to indicate whether the sensor is depressed or not. </p> </div>
 	<div class="col-md-4"><center><img src="Sensors_Pictures/LimitSwitch.png" HEIGHT="150px" /img></center>
 	<br><center><span class="captionStyle">Vex Limit Switch</span></center></div>
+	 <iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/51250046/?autostart=false" frameborder="0" allowfullscreen></iframe>
+	 <br>
 </div>
 
 <br>
@@ -125,11 +127,15 @@ return false;
 	<div class="col-md-7"><p>Light sensors, specifically IR sensors, are used to determine the distance, angle or timing of something. Infrared Sensors have an IR diode that produces light at the focal point of a lens; this produces parallel beams of light moving out of the lens into the surrounding environment. The sensor outputs a voltage that is related to the distance perceived by the sensor. The resultant curve is non-linear and as the object gets closer, the output voltage gets larger. In order to cover a larger area, consider using multiple IR sensors that are angled such that the fields of IR emitted cross each other. Alternatively, consider using a servo to create a sweeping motion and scan the entire area periodically. </p></div>
 	<div class="col-md-4"><center><img src="Sensors_Pictures/LineTracker.png" HEIGHT="200px" /img></center>
 	<br><center><span class="captionStyle">Vex Line Tracker</span></center></div>
+      <iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/51373710/?autostart=false" frameborder="0" allowfullscreen></iframe>
+	  <p>Drag the Line Tracker (Red) over the black and gray lines to see how the output value changes.</p>
 </div>
 
 <br>
 <h3 id="sound" class="offset">SONAR</h3>
 <p>SONAR sensors use sound waves in a way that mimics echolocation. SONAR sensors use a speaker and microphone to project sound into an environment and listen for it to return. SONAR sensors measure the time difference between the emission of the sound and when it comes back to determine distance. SONAR sensors can be used in both air and water. </p>
+<br>
+<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/51286052/?autostart=false" frameborder="0" allowfullscreen></iframe>
 <br>
 <h3 id="pot" class="offset">Potentiometer</h3>
 <div class="row">
@@ -138,8 +144,9 @@ return false;
 	<br><center><span class="captionStyle">Vex Potentiometer</span></center></div>
 	<div class="col-md-2"><center><img src="Sensors_Pictures/GreenPotentiometer.png" HEIGHT="125px" /img></center>
 	<br><center><span class="captionStyle">Standard Potentiometer</span></center></div>
+	<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/51475254/?autostart=false" frameborder="0" allowfullscreen></iframe>
 </div>
-
+<br> 
 <h3 id="gyro" class="offset">Gyro</h3>
 <p>Gyros measure the rate of rotation in a particular axis. Gyros have three main sensing applications. First, they can be used to sense the angular velocity of a component. Second, they can sense the angle that a certain component, subsystem, or entire system is at. Third, they can be used in control systems to sense the orientation or balance of an object and outputting signal to tell the system to correct those things. </p>
 <br>
